<resources>
    <string name="app_name">Kurso</string>
    <string name="delete_description">Удалить</string>
    <string name="email_format">Email: %s</string>
    <string name="name_format">Имя: %s</string>
    <string name="registration_date_format">Дата регистрации: %s</string>
    <string name="bio_format">О себе: %s</string>
    <string name="dark_theme">Тёмная</string>
    <string name="light_theme">Светлая</string>
    <string name="settings">Настройки</string>
    <string name="appearance">Внешний вид</string>
    <string name="dark_theme_enabled">Темная тема включена</string>
    <string name="light_theme_enabled">Светлая тема включена</string>
    <string name="app_settings">Настройки приложения</string>
    <string name="theme">Тема</string>
    <string name="back">Назад</string>
    <string name="friends">Друзья</string>
    <string name="friend_profile">Профиль друга</string>
    <string name="search">Поиск</string>
    <string name="search_users">Поиск пользователей</string>
    <string name="action_button">Действие</string>
    <string name="mood_statistics">Статистика настроения</string>
    <string name="total_notes_format">Всего заметок: %d</string>
    <string name="predominant_mood_format">Преобладающее настроение: %s</string>
    <string name="profile_image">Фото профиля</string>
    <string name="view_mood_history">История настроения</string>
    <string name="statistics">Статистика</string>
    <string name="mood_dynamics">Динамика настроения</string>
    <string name="send_gift">Подарить</string>
    <string name="gifts">Подарки</string>
    <string name="gift_from">Подарок от %s</string>
    <string name="my_gifts">Мои подарки</string>
    <string name="notification_settings">Настройки уведомлений</string>
    <string name="set_notification_time">Установить время уведомлений</string>
    <string name="cancel">Отмена</string>
    <string name="save">Сохранить</string>
    <string name="enable_notifications">Включить уведомления</string>
    <string name="notification_time">Время уведомления: %02d:%02d</string>
    <string name="notes">Заметки</string>
    <string name="trash">Корзина</string>
</resources>