<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_notes"
        android:icon="@drawable/ic_notes"
        android:title="@string/notes" />
    
    <item
        android:id="@+id/nav_statistics"
        android:icon="@drawable/ic_statistics"
        android:title="@string/statistics" />
    
    <item
        android:id="@+id/nav_friends"
        android:icon="@drawable/ic_friends"
        android:title="@string/friends" />

    <item
        android:id="@+id/nav_trash"
        android:icon="@drawable/ic_trash"
        android:title="@string/trash" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />

</menu>
